--- a/twitter_sqs_sns/sqs-sns.ipynb
+++ b/twitter_sqs_sns/sqs-sns.ipynb
@@ -936,7 +936,7 @@
    "source": [
     "# Initializing SQS\n",
     "\n",
-    "sqs = boto3.resource( 'sqs', aws_access_key_id=\"AKIAJC6BX3DXNYLN54NQ\", aws_secret_access_key=\"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\",region_name='us-east-1')\n",
+    "sqs = boto3.resource( 'sqs', aws_access_key_id=\"\", aws_secret_access_key=\"\",region_name='us-east-1')\n",
     "\n",
     "SQS_QUEUE_NAME='TweetTrend'\n",
     "\n",
