--- a/twitter_sqs_sns/twitter-sqs.ipynb
+++ b/twitter_sqs_sns/twitter-sqs.ipynb
@@ -2937,13 +2937,13 @@
     "#Access_Keys to be obtained from Twitter Application\n",
     "#Used to make Twitter API request\n",
     "\n",
-    "TWITTER_ACCESS_TOKEN = '852055580361588736-2AGe368ZMmIGqGSnKIdp8n2mB7tBUny'\n",
-    "TWITTER_ACCESS_TOKEN_SECRET = 'nfMNs6hppOjeqLrbRMBbxJ0jx3rDw7Djup894JAIJUIJj'\n",
+    "TWITTER_ACCESS_TOKEN = ''\n",
+    "TWITTER_ACCESS_TOKEN_SECRET = ''\n",
     "\n",
     "#Consumer keys to access Twitter Application \n",
     "\n",
-    "TWITTER_APP_KEY = 'Sk7ZBP8hH0E6IRdiqp4BC272R'\n",
-    "TWITTER_APP_KEY_SECRET = 'dAbsQBzFG0Q9fYT9NRNL2GHLiUYdbHRotrdCndDMTnrhFhIFHx'\n",
+    "TWITTER_APP_KEY = ''\n",
+    "TWITTER_APP_KEY_SECRET = ''\n",
     "\n",
     "SQS_QUEUE_NAME='TweetTrend'\n",
     "\n",
@@ -2956,7 +2956,7 @@
     "\n",
     "#Initializing SQS\n",
     "\n",
-    "sqs = boto3.resource( 'sqs', aws_access_key_id=\"AKIAJC6BX3DXNYLN54NQ\", aws_secret_access_key=\"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\",region_name='us-east-1')\n",
+    "sqs = boto3.resource( 'sqs', aws_access_key_id=\"\", aws_secret_access_key=\"\",region_name='us-east-1')\n",
     "\n",
     "queue = sqs.get_queue_by_name(QueueName=SQS_QUEUE_NAME)\n",
     "\n",
