--- a/twitter_kafka_sns/Kafka_sns_consumer.ipynb
+++ b/twitter_kafka_sns/Kafka_sns_consumer.ipynb
@@ -27,7 +27,7 @@
     "        tweet = json.dumps(tweet)\n",
     "        print (tweet)\n",
     "        \n",
-    "        client = boto3.client('s3', aws_access_key_id=\"AKIAJC6BX3DXNYLN54NQ\", aws_secret_access_key=\"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\",region_name='us-east-1')\n",
+    "        client = boto3.client('s3', aws_access_key_id=\"\", aws_secret_access_key=\"\",region_name='us-east-1')\n",
     "        response = client.publish(\n",
     "        TargetArn='arn:aws:s3:::project1aws',\n",
     "        Message=json.dumps({'default': tweet}),\n",
