--- a/twitter_kafka_sns/twitter_kafka_producer.ipynb
+++ b/twitter_kafka_sns/twitter_kafka_producer.ipynb
@@ -374,13 +374,13 @@
     "#Access_Keys to be obtained from Twitter Application\n",
     "#Used to make Twitter API request\n",
     "\n",
-    "TWITTER_ACCESS_TOKEN = '852055580361588736-vN0Fn0AjT7zCnRZ4Ljj7pQc4r06dtGd'\n",
-    "TWITTER_ACCESS_TOKEN_SECRET = 'JZlVDeK9PDJhlj0ndJrDGLoYD9q4JmtZBBmZsLFYEE1V7'\n",
+    "TWITTER_ACCESS_TOKEN = ''\n",
+    "TWITTER_ACCESS_TOKEN_SECRET = ''\n",
     "\n",
     "#Consumer keys to access Twitter Application \n",
     "\n",
-    "TWITTER_APP_KEY = 'z5lTf3sAbJDjGnGFsRFcvv1MK'\n",
-    "TWITTER_APP_KEY_SECRET = 'HbXFtsDHCuFllDI2MBhxjUThK0Yv96JuPzn3lf3aHmVNpZCI0V'\n",
+    "TWITTER_APP_KEY = ''\n",
+    "TWITTER_APP_KEY_SECRET = ''\n",
     "\n",
     "#Authenticating Credentials \n",
     "\n",
